tests/errors/macro/parser_unexpected_endif.c
int a = 1;
#endif a = 0;

int main()
{
	assert(a, "recovery is not working");
	return 0;
}
